QuizSite/WebContent/stylesheet.css
.* {
	font-family:"Tahoma", sans-serif;
}
.navbar {
	float:right;
	padding:0px;
}
.inline {
	display:inline;
}

/*Table Styles */
table th {
    background-color:darkslategray;
    color:white;
    font-weight: bold;
}
table.table1 td{ 
	border-left:1px dotted black;
	border-right:1px dotted black;
	border-bottom:1px dotted black;
	padding:5px;
}
table.table2 td, table.table3 td, table.table4 td, table.table5 td  { 
	border-left:0px dotted black;
	border-right:0px dotted black;
	border-bottom:0px;
	padding:5px;
	text-align:center;
}
table.table1 th, table.table2 th, table.table3 th {
	border-bottom:1px dotted black;
	min-width:80px;
}
table.table4 th {
	border-bottom:1px dotted black;
	width: 300px;
}
table.table5 th {
	width:80px;
	border-bottom:1px dotted black;
}
.friendTable th, td {
	width:450px;
}
table.statsTable {
	padding-top:10px;
}


.panel3 {
	width:40%;
	float:left;
}
.panel4 {
	width:60%;
	float:left;
}
.list1 {
	list-style-type:none;
	margin-top:-10px;
	margin-left:-20px;
}
.table3 {
	margin-left:-5px;
}
.quiz-buttons {
	float:right;
}
.centeredImage {
	display:block;
	margin-left:auto;
	margin-right:auto;
}
.centered {
	margin-left:auto;
	margin-right:auto;
	width:325px;
}
.loginButton {
	padding:5px;
	background-color:whitesmoke;
	border: 1px solid #666;
  	color:#000;
  	width:250px;
}
.logo {
	height:75px;
}
.right {
	float:right;
}

.navbarItem {
	padding:3px;
}
.navbarPanel {
	background-color:ghostwhite;
}

.submitLink {
background-color: transparent;
text-decoration: underline;
border: none;
color: blue;
cursor: pointer;
}
.announce {
	font-weight:bold;
	margin-left:25px;
}
.announceTitle {
	margin-left:10px;
}
.announcementPanel {
	background-color:yellow;
	border-style:solid;
	border-color:goldenrod;
	border-width:2px;
	-moz-border-radius: 15px;
	border-radius: 15px;
}

.profile {
	width:100px;
	height:100px;
	padding:20px;
}

.homepageLeft {
	width:60%;
	float:left;
}
.homepageRight {
	width:40%;
	float:left;
}

.welcomePanel {
	max-width:100%;
}
.welcome {
	font-weight:bold;
	font-size:xx-large;
	word-break:break-all;
}

.achievements, .message {
	margin-left:50px;
}

.messageList {
	list-style-type:none;
	margin-left:10px;
}
.achievementMessagePanel {
	max-width:100%;
}
.inputText {
	width:200px;
}
.friendPanel {
	padding:20px;
	background-color:lavender;
	border-style:solid;
	border-color:blueviolet;
	border-width:2px;
	-moz-border-radius: 15px;
	border-radius: 15px;
}
.friendInput {
	margin-left:10px;
}
.inboxList {
	list-style-type:none;
}
.messagePanel {
	padding:20px;
	background-color:lavender;
	border-style:solid;
	border-color:blueviolet;
	border-width:2px;
	-moz-border-radius: 15px;
	border-radius: 15px;
}
.removeButton {
	margin-top:-60px;
	margin-right:40px;
}
.composeIcon {
	width:40px;
	height:40px;
}
.compose {
	margin-right:20px;
}
.leftQuiz {
	width:70%;
	float:left;
}
.rightQuiz {
	width:20%;
	float:left;
}
.takeButton {
	padding:5px;
	background-color:whitesmoke;
	border-color:lavender;
	border-style:groove;
	border-width:5px;
  	width:250px;
  	height:100px;
  	font-size:50;
}
.testPicture {
	max-height:200px;
	max-width:100%;
}

